--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
       <form id="feedback-form">
         <h2>Leave some feedback</h2>
         <p>Feedback</p>
+        <p id="bad-characters"></p>
+        <p id="is-focus"></p>
         <label for="feedback">
           <input
             type="text"
@@ -71,6 +73,11 @@
           />
         </label>
         <br />
+        <p id="premium-selected"></p>
+        <label for="premium">
+          Are you a premium user?
+          <input type="checkbox" name="premium" id="premium">
+        </label>
         <button type="submit">Submit Feedback</button>
       </form>
       <section id="feedback-section">
